dsci-401/spring-2018/repl_examples/9.25.2017-map-examples
Microsoft Windows [Version 10.0.14393]
(c) 2016 Microsoft Corporation. All rights reserved.

C:\Users\Administrator>cd c:\GitHub\dsci_401

c:\GitHub\dsci_401>dir
 Volume in drive C is Windows
 Volume Serial Number is A8A6-CBB7

 Directory of c:\GitHub\dsci_401

09/22/2017  02:12 PM    <DIR>          .
09/22/2017  02:12 PM    <DIR>          ..
09/11/2017  02:33 PM                 7 .gitignore
09/22/2017  02:23 PM             1,032 basic_functions.py
09/22/2017  02:11 PM             1,092 basic_functions.pyc
09/22/2017  02:13 PM    <DIR>          data
09/15/2017  02:25 PM               664 hello_world.py
09/09/2017  09:34 AM               123 hello_world.pyc
09/08/2017  02:13 PM               126 README.md
09/22/2017  02:28 PM    <DIR>          repl_examples
09/22/2017  02:10 PM               690 test_bs.py
               7 File(s)          3,734 bytes
               4 Dir(s)  16,801,550,336 bytes free

c:\GitHub\dsci_401>python
Python 2.7.13 |Anaconda 4.4.0 (64-bit)| (default, May 11 2017, 13:17:26) [MSC v.1500 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
Anaconda is brought to you by Continuum Analytics.
Please check out: http://continuum.io/thanks and https://anaconda.org
>>> a = '   XYZ\n\n  '
>>> a
'   XYZ\n\n  '
>>> a.strip()
'XYZ'
>>> exit()

c:\GitHub\dsci_401>python test_bs.py
8
10
15
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]
[1, 4, 7, 10, 13, 16, 19, 22, 25, 28, 31, 34, 37, 40, 43, 46, 49]
[1, 5, 9, 13, 17, 21, 25, 29, 33, 37, 41, 45, 49]
[1, 4, 7, 10]
*
**
***



*
**
***
****
*****



*
**
***
****
*****
****
***
**
*
{'a': 1, 'x': 2, 2: 2, 3: 1}
Traceback (most recent call last):
  File "test_bs.py", line 28, in <module>
    print(bs.word_count('./data/sample_text.txt', case_sensitive=False))
AttributeError: 'module' object has no attribute 'word_count'

c:\GitHub\dsci_401>python test_bs.py
8
10
15
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]
[1, 4, 7, 10, 13, 16, 19, 22, 25, 28, 31, 34, 37, 40, 43, 46, 49]
[1, 5, 9, 13, 17, 21, 25, 29, 33, 37, 41, 45, 49]
[1, 4, 7, 10]
*
**
***



*
**
***
****
*****



*
**
***
****
*****
****
***
**
*
{'a': 1, 'x': 2, 2: 2, 3: 1}
{'a': 1, 'tonight': 1, 'name': 1, 'for': 1, 'be': 1, 'this': 1, 'text': 1, 'is': 2, 'm': 1, 'extra-special': 1, 'sample': 1, 'i': 1, 'dinner': 1, 'will': 1, 'file': 1, 'chris': 1, 'my': 1, 'having': 1, 'pizza': 1}

c:\GitHub\dsci_401>python test_bs.py
8
10
15
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]
[1, 4, 7, 10, 13, 16, 19, 22, 25, 28, 31, 34, 37, 40, 43, 46, 49]
[1, 5, 9, 13, 17, 21, 25, 29, 33, 37, 41, 45, 49]
[1, 4, 7, 10]
*
**
***



*
**
***
****
*****



*
**
***
****
*****
****
***
**
*
{'a': 1, 'x': 2, 2: 2, 3: 1}
{'a': 1, 'tonight': 1, 'name': 1, 'for': 1, 'be': 1, 'this': 1, 'text': 1, 'is': 2, 'extra-special': 1, 'sample': 1, 'will': 1, 'dinner': 1, 'file': 1, 'chris': 1, "i'm": 1, 'my': 1, 'having': 1, 'pizza': 1}

c:\GitHub\dsci_401>python
Python 2.7.13 |Anaconda 4.4.0 (64-bit)| (default, May 11 2017, 13:17:26) [MSC v.1500 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
Anaconda is brought to you by Continuum Analytics.
Please check out: http://continuum.io/thanks and https://anaconda.org
>>> (lambda x: x + 1)(3)
4
>>> increment
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'increment' is not defined
>>> increment = lambda x: x + 1
>>> increment(3)
4
>>> increment(10)
11
>>> add2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'add2' is not defined
>>> add2 = lambda x,y: x + y
>>> add2(2m4)
  File "<stdin>", line 1
    add2(2m4)
           ^
SyntaxError: invalid syntax
>>> add2(2, 4)
6
>>> e = [ 1,3,5,7,9]
>>> e
[1, 3, 5, 7, 9]
>>> map(increment, e)
[2, 4, 6, 8, 10]
>>> map(increment, [1, 3, 5, 7, 9])
[2, 4, 6, 8, 10]
>>> map(lambda x: x + 1, [1, 3, 5, 7, 9])
[2, 4, 6, 8, 10]
>>> list(map(lambda x: x + 1, [1, 3, 5, 7, 9]))
[2, 4, 6, 8, 10]
>>> 3 ** 2
9
>>> [2,4,6,8]
[2, 4, 6, 8]
>>> map(lambda x: x * x, [2, 4, 6, 8])
[4, 16, 36, 64]
>>> map(lambda x: x * x, range(1, 11))
[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]
>>> squares(4)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'squares' is not defined
>>> squares_upto = lambda n: map(lambda x: x * x, range(1, n + 1))
>>> squares_upto(5)
[1, 4, 9, 16, 25]
>>>